--- a/banco-app/src/index.html
+++ b/banco-app/src/index.html
@@ -9,8 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- Bootstrap core CSS     -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!--  Material Dashboard CSS    -->
     <link href="assets/css/material-dashboard.css?v=1.2.0" rel="stylesheet"/>
 
